--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -11,21 +11,23 @@ title = "ccc-yuan的个人主页"
   dateFormat = "2 January 2006"
   logo = "profile.png"
   secondaryLogo = "img/profile.png"
-  description = "My awesome website"
-  copyright = "Copy, _right?_ :thinking_face:"
+  description = "description"
+  copyright = ""
 
 [params.author]
   name = "ccc-yuan"
   email = "584235526@qq.com"
   image = "profile.jpg"
   imageQuality = 96
-  headline = "I'm only human"
+  headline = "zju 24 psychology"
   bio = "A little bit about you"
   links = [
     { email = "mailto:584235526@qq.com" },
-    { link = "https://link-to-some-website.com/" },
+    { link = "https://tarduspura.github.io/" },
+    { bilibili = "https://space.bilibili.com/424237061?spm_id_from=333.1007.0.0"},
+#     { cc98 = "https://www.cc98.org/user/id/766197"},
 #     { amazon = "https://www.amazon.com/hz/wishlist/ls/wishlist-id" },
-    { apple = "https://www.apple.com" },
+#     { apple = "https://www.apple.com" },
 #     { blogger = "https://username.blogspot.com/" },
 #     { bluesky = "https://bsky.app/profile/username" },
 #     { codepen = "https://codepen.io/username" },
@@ -35,8 +37,8 @@ title = "ccc-yuan的个人主页"
 #     { facebook = "https://facebook.com/username" },
 #     { flickr = "https://www.flickr.com/photos/username/" },
 #     { foursquare = "https://foursquare.com/username" },
-#     { github = "https://github.com/username" },
-    { gitlab = "https://gitlab.com/username" },
+    { github = "https://github.com/ccc-yuan/" },
+#     { gitlab = "https://gitlab.com/username" },
 #     { google = "https://www.google.com/" },
 #     { hashnode = "https://username.hashnode.dev" },
 #     { instagram = "https://instagram.com/username" },
